Message: Check whether there is at least one attachment before showing the attachments section - refs BT#21594

--- a/public/main/template/default/message/view_message.html.twig
+++ b/public/main/template/default/message/view_message.html.twig
@@ -40,7 +40,7 @@
                {{ message.content }}
             </div>
 
-            {% if message.attachments %}
+            {% if message.attachments.quantity > 0 %}
                 <div class="email-attachments">
                     <div class="title">{{ 'Attachments'|trans }} <span>({{ message.attachments.quantity }} {{ 'Files'|trans }}, {{ message.attachments.total_size }})</span></div>
                     <ul>
